@@ -66,6 +66,7 @@
 * Allowed default alarmCommand on 'batt' plugin be translated.
 * Implemented sorting plugins in Add plugin window in alphabetic order.
 * Fixed font in the weather plugin to use panel settings.
+* Added new API lxpanel_button_compose() for future usage by plugins.
 
 0.7.2
 -------------------------------------------------------------------------
